# notebook-explorations

./: .gitignore  README.md  mbr.py  performance.py  pyproject.toml  seed_data.py  seed_performance_data.py
data/: individual_goals.csv  individual_reviews.csv  mbr_metrics.csv  people.csv
