[project]
name = "ideal-mbr"
version = "0.1.0"
description = "Dealer Monthly Business Review - Marimo Notebook"
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.14.0",
    "pandas>=2.2.0",
    "altair>=5.4.0",
    "pyarrow>=17.0.0",
    "vl-convert-python>=1.7.0",
]

[tool.uv]
package = false
